--- a/ponto_turistico/pontos_turisticos.html
+++ b/ponto_turistico/pontos_turisticos.html
@@ -10,12 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap"
       rel="stylesheet"
     />
-    <title>Marco Zero - Recife</title>
+    <title>Pontos Turísticos do Recife</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <h1>Marco Zero do Recife</h1>
+      <h1>Pontos Turísticos do Recife</h1>
       <nav>
         <a href="../index.html">Marco Zero</a>
       </nav>
