--- a/ponto_turistico/pontos_turisticos.html
+++ b/ponto_turistico/pontos_turisticos.html
@@ -10,12 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap"
       rel="stylesheet"
     />
-    <title>Marco Zero - Recife</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Pontos Turísticos do Recife</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <h1>Marco Zero do Recife</h1>
+      <h1>Pontos Turísticos do Recife</h1>
       <nav>
         <a href="../index.html">Marco Zero</a>
       </nav>
@@ -51,32 +51,15 @@
       </section>
     </main>
     <footer>
-      <ul>
-        <li>
-          <a href="https://www.facebook.com" target="_blank"
-            ><i class="fab fa-facebook"></i> Facebook</a
-          >
-        </li>
-        <li>
-          <a href="https://www.twitter.com" target="_blank"
-            ><i class="fab fa-twitter"></i> Twitter</a
-          >
-        </li>
-        <li>
-          <a href="https://www.instagram.com" target="_blank"
-            ><i class="fab fa-instagram"></i> Instagram</a
-          >
-        </li>
-        <li>
-          <a href="https://www.linkedin.com" target="_blank"
-            ><i class="fab fa-linkedin"></i> LinkedIn</a
-          >
-        </li>
-      </ul>
-      <p>
+      <div class="social-links">
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">LinkedIn</a>
+      </div>
+      <div class="copyright">
         © 2024 Informações sobre o Marco Zero do Recife. Todos os direitos
         reservados.
-      </p>
+      </div>
     </footer>
   </body>
 </html>
